...
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EQx-fD-reD">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="TableViewBottomSheet"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="rbo-gL-Qne"/>
                        <outlet property="delegate" destination="-1" id="zud-Zb-orU"/>
                    </connections>
                </tableView>
...
