...
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jm6-9x-33z">
                    <rect key="frame" x="160.5" y="93" width="54" height="30"/>
                    <state key="normal" title="Dismiss"/>
                    <connections>
                        <action selector="dismissButtonTappedWithSender:" destination="-1" eventType="touchUpInside" id="WY5-HU-6LO"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
